tests/fixtures/invalid/set_sub_str.py
# Cannot subtract Set[int] and Str
x: set[int] = {1, 2, 3} - "hello"
